se agregan las etiquetas